--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/action/FrameLoadAction.java=UTF-8
 encoding//src/action/MainLoadAction.java=UTF-8
+encoding//src/action/MainLoadAction_backup.java=UTF-8
